<resources>
    <string name="apple">Apple</string>
    <string name="apricot">Apricot</string>
    <string name="artichoke">Artichoke</string>
    <string name="asparagus">Asparagus</string>
    <string name="avocado">Avocado</string>
    <string name="banana">Banana</string>
    <string name="bay">Bay Leaf</string>
    <string name="beet">Beet</string>
    <string name="blackberry">Blackberry</string>
    <string name="broccoli">Broccoli</string>
    <string name="cabbage">Cabbage (White and Red)</string>
    <string name="carrot">Carrot</string>
    <string name="celery">Celery</string>
    <string name="cherries">Cherries</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="coriander">Coriander</string>
    <string name="cucumber">Cucumber</string>
    <string name="date">Date</string>
    <string name="eggplant">Eggplant</string>
    <string name="fig">Fig</string>
    <string name="fennel">Fennel</string>
    <string name="garlic">Garlic</string>
    <string name="ginger">Ginger</string>
    <string name="grapefruit">Grapefruit</string>
    <string name="grape">Grape</string>
    <string name="guava">Guava</string>
    <string name="horseradish">Horseradish</string>
    <string name="kiwi">Kiwi</string>
    <string name="lemon">Lemon</string>
    <string name="lettuce">Lettuce</string>
    <string name="lychee">Lychee</string>
    <string name="mango">Mango</string>
    <string name="melon">Melon</string>
    <string name="mint">Mint</string>
    <string name="mushroom">Mushroom</string>
    <string name="nectarine">Nectarine</string>
    <string name="olive">Olive</string>
    <string name="onion">Onion</string>
    <string name="orange">Orange</string>
    <string name="oregano">Oregano</string>
    <string name="parsley">Parsley</string>
    <string name="paprika">Paprika</string>
    <string name="peach">Peach</string>
    <string name="pear">Pear</string>
    <string name="peanuts">Peanuts</string>
    <string name="popcorn">Popcorn</string>
    <string name="pepper">Pepper</string>
    <string name="pineapple">Pineapple</string>
    <string name="plum">Plum</string>
    <string name="pomegranate">Pomegranate</string>
    <string name="pomelo">Pomelo</string>
    <string name="potato">Potato</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="poppy_seed">Poppy Seed</string>
    <string name="quince">Quince</string>
    <string name="radish">Radish</string>
    <string name="rice">Rice</string>
    <string name="sabra">Sabra (prickly pear)</string>
    <string name="saffron">Saffron</string>
    <string name="sesame">Sesame</string>
    <string name="squash">Squash</string>
    <string name="strawberry">Strawberry</string>
    <string name="spinach">Spinach</string>
    <string name="sweet_pepper">Sweet Pepper</string>
    <string name="sweet_potato">Sweet Potato</string>
    <string name="tangerine">Tangerine</string>
    <string name="tomato">Tomato</string>
    <string name="turnip">Turnip</string>
    <string name="watermelon">Watermelon</string>
    <string name="zucchini">Zucchini</string>
    <string name="jan"> January</string>
    <string name="feb"> February</string>
    <string name="mar"> March</string>
    <string name="apr"> April</string>
    <string name="may"> May</string>
    <string name="jun"> June</string>
    <string name="jul"> July</string>
    <string name="aug"> August</string>
    <string name="sept"> September</string>
    <string name="oct"> October</string>
    <string name="nov"> November</string>
    <string name="dec"> December</string>
    <string name="fourteen"> 2014</string>
    <string name="fifteen"> 2015</string>
    <string name="sixteen"> 2016</string>
    <string name="seventeen"> 2017</string>
    <string name="no_sefichim"> No Sefichim</string>
    <string name="mid_jan_15"> Mid-January 2015</string>
    <string name="jan_15"> January 2015</string>
    <string name="jan_17"> January 2017</string>
    <string name="feb_15"> February 2015</string>
    <string name="mar_15"> March 2015</string>
    <string name="mar_16"> March 2016</string>
    <string name="jul_15"> July 2015</string>
    <string name="jul_16"> July 2016</string>
    <string name="aug_15"> August 2015</string>
    <string name="aug_16"> August 2016</string>
    <string name="sept_15"> September 2015</string>
    <string name="sept_16"> September 2016</string>
    <string name="oct_14"> October 2014</string>
    <string name="nov_14"> November 2014</string>
    <string name="nov_15"> November 2015</string>
    <string name="dec_14"> December 2014</string>
    <string name="or">or</string>
    <string name="raw">Raw</string>
    <string name="cooked">Cooked</string>
    <string name="salad">Raw in salad</string>
    <string name="roasted">Roasted</string>
    <string name="with_other">With other foods (ie. not alone)</string>
    <string name="fried">Fried</string>
    <string name="pickled">Pickled</string>
    <string name="raw_or_cooked">Raw or cooked</string>
    <string name="raw_or_baked">Raw or baked in cake</string>
    <string name="salad_cooked">Raw in salad or cooked</string>
    <string name="cooked_roasted">Cooked or Roasted</string>
    <string name="raw_or_pickled">Raw or Pickled</string>
    <string name="salad_cooked_fried">Raw in salad, cooked or fried</string>
    <string name="cooked_fried_baked">Cooked, fried or baked</string>
    <string name="raw_cooked_fried_pickled">Raw, cooked, fried or pickled</string>
    <string name="cooked_raw_roasted">Cooked, raw or roasted</string>
    <string name="raw_roasted_chocolate">Raw, roasted, cooked in chocolate</string>
    <string name="cooked_roasted_fried_baked">Cooked, roasted, fried, baked</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kedusha">Kedusha</string>
    <string name="no_kedusha">No Kedusha</string>
    <string name="no_kedusha_chul">No Kedusha as comes from outside Israel</string>
    <string name="kedusha_fruit">Kedusha if fruit attached</string>
    <string name="outer_kedusha">Outer layer - no kedusha</string>
    <string name="outer_layer">Outer layer - </string>
    <string name="banana_smash">For children or for cake</string>
    <string name="cabbage_smash">Can be grated or shredded</string>
    <string name="lemon_smash">Yes, in a tea or to give flavour to food</string>
    <string name="pear_smash">No, Some allow it</string>
    <string name="potato_smash">Yes (can be made into potato flour)</string>
    <string name="pumpkin_smash">Yes. After it is cooked</string>
    <string name="tomato_smash">Yes - but should not be strained </string>
    <string name="apple_comment">May be dried – stem has no kedusha</string>
    <string name="apricot_comment">May be peeled finely for a child or elderly person - may be dried </string>
    <string name="banana_comment">For adults can be mashed slightly.</string>
    <string name="beet_comment">If made into borscht – it retains kedusha</string>
    <string name="carrot_comment">May be grated for salad</string>
    <string name="stem_comment">Stem has no kedusha</string>
    <string name="dried_comment">May be dried</string>
    <string name="garlic_comment">May be used to give flavour when pickling even if no intention to eat it. Should not be swallowed raw</string>
    <string name="grapefruit_comment">Squeeze as much as possible and juice has kedusha</string>
    <string name="grape_comment">May be peeled finely or mashed for a child or elderly person. May be dried for raisins.</string>
    <string name="lemon_comment">May put lemon rind (peel) into dough for flavour. Cannot be used for removing stains.</string>
    <string name="lettuce_comment">Can remove \'bad\' parts of it even if some good parts will come with it.</string>
    <string name="melon_comment">Careful when throwing away the seeds not to waste any fruit</string>
    <string name="olive_comment">Biur for olives/oil is Shevuos of 8th year</string>
    <string name="onion_comment">May be minced for fish - juice  has kedusha. Can be cooked with chicken even if onions will not be eaten</string>
    <string name="orange_comment">Squeeze as much as possible and juice is kedusha</string>
    <string name="peach_comment">May be peeled finely or mashed for a child or elderly person</string>
    <string name="peanut_comment">Making peanut oil from shmittah peanuts is subject to a dispute</string>
    <string name="plum_comment">May be peeled for a child</string>
    <string name="potato_comment">The Water it is cooked in has no Kedusha</string>
    <string name="tomato_comment">May be cut even if some juice will be lost.</string>
    <string name="details_approx_dates">Approximate dates of Kedusha</string>
    <string name="details_sefichim_dates">Approximate Sefichim dates</string>
    <string name="details_start">Start:</string>
    <string name="details_end">End:</string>
    <string name="details_prepared">How may it be prepared or eaten:</string>
    <string name="details_peeled">May it be peeled? </string>
    <string name="details_pits">Status of pits/seeds:</string>
    <string name="details_peel">Status of peel:</string>
    <string name="details_mashed">May it be squeezed/blended/mashed?</string>
    <string name="details_comments">Comments:</string>
    <string name="dedication_lefkowitz">The Shmittah App was developed by Yitz Lefkowitz. Contact him for any and all Android app development. The app is currently in beta release, please look out for updates.</string>
    <string name="dedication_weisenfeld">The material in The Shmittah App was taken with permission from The Pocket Halacha Series Written by Rabbi A. Wiesenfeld a Rosh Kollel and Maggid Shiur in Yerushalayim</string>
    <string name="dedication_get_started">To get started just tap the top-left corner of the screen, or else swipe from left to right.</string>
    <string name="about_lefkowitz">The Shmittah App was developed by Yitzhak Lefkowitz in order to help people with their Shmittah observance. The app is currently in beta release, please look out for updates.</string>
    <string name="about_weisenfeld1">The information in The Shmittah App was taken with permission from The Pocket Halacha Series - \"Shmittah in the Kitchen\" a popular addition to the growing Pocket Halachos Series written by Rabbi Avraham Wiesenfeld.</string>
    <string name="about_weisenfeld2">Rabbi Avraham Wiesenfeld is the Rosh Kollel of a Halacha Kollel in Romema, Yerushalayim, a Maggid Shiur in various yeshivos in Yerushalayim and a sought after speaker, both in Israel and in the UK. He is the author of the popular book \"Kashrus in the Kitchen - QA\" published by Feldheim which has sold thousands of copies worldwide.</string>
    <string name="about_weisenfeld3">The information on fruits and vegetables was sent as a chart form to over 50,000 people in Israel.</string>
    <string name="about_weisenfeld4">If you want to organize a shiur on the Halachos of Shmittah or any other topic from Rabbi Wiesenfeld - please send a message though the \"Ask the Rabbi\" menu option.</string>
    <string name="about_jacobs">Thank you Kayla Jacobs from New York who gave me the idea for this project</string>
    <string name="about_version">Version:</string>
    <string name="donate_plea1">Thanks for using The Shmittah App. I\'ve put a lot of work into this \
        project so I\'m asking users to help out a bit. The plan is to keep The Shmittah App free so \
        that people have the halachos literally in their pockets.</string>
    <string name="donate_plea2">Money goes towards updates as well as future Torah apps. Please keep in mind that there aren\'t\
         that many Torah observant Jews living in Israel who own a smartphone. </string>
    <string name="donate_instructions">Recommended donation is $5.</string>
    <string name="dialog_title">The Shmittah App</string>
</resources>