<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:padding="10dp">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/ad"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ad_portrait_all"
	        android:adjustViewBounds="true"
			android:scaleType="centerCrop" 
			android:paddingBottom="5dp"/>

	    <TextView
	        android:id="@+id/about_lefkowitz"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_lefkowitz" />
	
	    <TextView
	        android:id="@+id/about_weisenfeld1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_weisenfeld1"
	        android:paddingTop="10dp" />
	
	    <TextView
	        android:id="@+id/about_weisenfeld2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_weisenfeld2" 
	        android:paddingTop="10dp"/>
	
	    <TextView
	        android:id="@+id/about_weisenfeld3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_weisenfeld3" 
	        android:paddingTop="10dp"/>
	
	    <TextView
	        android:id="@+id/about_weisenfeld14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/about_weisenfeld4" 
	        android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/about_jacobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_jacobs"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:paddingTop="10dp"/>

    </LinearLayout>
</ScrollView>