<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/ad"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ad_portrait_landing"
	        android:adjustViewBounds="true"
			android:scaleType="centerCrop" 
			android:paddingBottom="5dp"/>

	    <TextView
	        android:id="@+id/dedication_lefkowitz"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dedication_lefkowitz" />

	    <TextView
	        android:id="@+id/dedication_weisenfeld"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dedication_weisenfeld"
	        android:paddingTop="10dp" />
	
	    <TextView
	        android:id="@+id/dedication_get_started"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/dedication_get_started"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	    
	</LinearLayout>

</ScrollView>